{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 125,
  "lineage": "6a95b9bb-a8d1-b87e-2155-04ef0a470c83",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_contingencia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/zones/us-east1-b/instanceGroups/grupo-servicio-contingencia",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-07-01T06:15:29.719-07:00",
            "deletion_policy": "DELETE",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "jPemUkHnscs=",
            "generated_id": 1226540880637766686,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/healthChecks/http-health-check-proyecto"
            ],
            "id": "projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-contingencia",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-servicio-contingencia",
            "port_name": "http",
            "project": "proyecto-terraform-gcp",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-contingencia",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "backend-servicio-contingencia",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.servicio_contingencia",
            "google_compute_instance_group.grupo_contingencia",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "backend_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/zones/us-east1-b/instanceGroups/grupo-servicio-principal",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-07-01T06:15:50.282-07:00",
            "deletion_policy": "DELETE",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "qR52gtmNJCg=",
            "generated_id": 3841589017966063081,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/healthChecks/http-health-check-proyecto"
            ],
            "id": "projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-principal",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend-servicio-principal",
            "port_name": "http",
            "project": "proyecto-terraform-gcp",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-principal",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "backend-servicio-principal",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.servicio_principal",
            "google_compute_instance_group.grupo_principal",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-01T06:14:47.582-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyecto-terraform-gcp/global/firewalls/allow-health-checks-proyecto-terraform",
            "log_config": [],
            "name": "allow-health-checks-proyecto-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform",
            "params": [],
            "priority": 1000,
            "project": "proyecto-terraform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/firewalls/allow-health-checks-proyecto-terraform",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-terraform"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-health-checks-proyecto-terraform",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-07-01T06:14:47.639-07:00",
            "deletion_policy": "DELETE",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/proyecto-terraform-gcp/global/firewalls/allow-http-proyecto-terraform",
            "log_config": [],
            "name": "allow-http-proyecto-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform",
            "params": [],
            "priority": 1000,
            "project": "proyecto-terraform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/firewalls/allow-http-proyecto-terraform",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-terraform"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "allow-http-proyecto-terraform",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.68.82.74",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-07-01T06:14:36.289-07:00",
            "deletion_policy": "DELETE",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/proyecto-terraform-gcp/global/addresses/ip-publica-proyecto-terraform",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "ip-publica-proyecto-terraform",
            "prefix_length": 0,
            "project": "proyecto-terraform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/addresses/ip-publica-proyecto-terraform",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "ip-publica-proyecto-terraform",
            "project": "proyecto-terraform-gcp"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "deletion_policy": "DELETE",
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 5729957413552434473,
            "id": "projects/proyecto-terraform-gcp/global/forwardingRules/http-forwarding-rule-proyecto",
            "ip_address": "136.68.82.74",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "http-forwarding-rule-proyecto",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "proyecto-terraform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/forwardingRules/http-forwarding-rule-proyecto",
            "target": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/targetHttpProxies/http-proxy-proyecto-terraform"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "http-forwarding-rule-proyecto",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_backend_service.backend_contingencia",
            "google_compute_backend_service.backend_principal",
            "google_compute_global_address.lb_ip",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.servicio_contingencia",
            "google_compute_instance.servicio_principal",
            "google_compute_instance_group.grupo_contingencia",
            "google_compute_instance_group.grupo_principal",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_target_http_proxy.http_proxy",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "servicio_contingencia",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260609",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/zones/us-east1-b/disks/vm-servicio-contingencia"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-07-01T07:07:49.057-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/proyecto-terraform-gcp/zones/us-east1-b/instances/vm-servicio-contingencia",
            "instance_id": "4280813363160195547",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "ssKjdS5y-X8=",
            "metadata_startup_script": "#!/bin/bash\nset -eux\n\nmkdir -p /var/www/html\n\nprintf '%s\\n' \\\n'\u003c!DOCTYPE html\u003e' \\\n'\u003chtml\u003e' \\\n'\u003chead\u003e' \\\n'  \u003cmeta charset=\"UTF-8\"\u003e' \\\n'  \u003ctitle\u003eServicio de Contingencia\u003c/title\u003e' \\\n'\u003c/head\u003e' \\\n'\u003cbody style=\"font-family: Arial; text-align: center; margin-top: 80px;\"\u003e' \\\n'  \u003ch1\u003eError 503 - Sitio en Mantenimiento Programado\u003c/h1\u003e' \\\n'\u [...]
            "name": "vm-servicio-contingencia",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.24.245.22",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform",
                "network_ip": "10.10.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/regions/us-east1/subnetworks/subnet-proyecto-terraform",
                "subnetwork_project": "proyecto-terraform-gcp",
                "vlan": 0
              }
            ],
            "project": "proyecto-terraform-gcp",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/zones/us-east1-b/instances/vm-servicio-contingencia",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-terraform"
            ],
            "tags_fingerprint": "bjTO73hYDy4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "servicio_principal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC",
                  "SEV_CAPABLE",
                  "SEV_LIVE_MIGRATABLE_V2"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-12-bookworm-v20260609",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/zones/us-east1-b/disks/vm-servicio-principal"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-07-01T07:07:49.101-07:00",
            "current_status": "RUNNING",
            "deletion_policy": "DELETE",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/proyecto-terraform-gcp/zones/us-east1-b/instances/vm-servicio-principal",
            "instance_id": "444733026038489563",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "3FWN7am39T4=",
            "metadata_startup_script": "#!/bin/bash\nset -eux\n\nmkdir -p /var/www/html\n\nprintf '%s\\n' \\\n'\u003c!DOCTYPE html\u003e' \\\n'\u003chtml\u003e' \\\n'\u003chead\u003e' \\\n'  \u003cmeta charset=\"UTF-8\"\u003e' \\\n'  \u003ctitle\u003eServicio Principal\u003c/title\u003e' \\\n'\u003c/head\u003e' \\\n'\u003cbody style=\"font-family: Arial; text-align: center; margin-top: 80px;\"\u003e' \\\n'  \u003ch1\u003eBienvenido al Servicio Principal - Versión Producción\u003c/h1\u003e' \\\n' [...]
            "name": "vm-servicio-principal",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.24.33.146",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform",
                "network_ip": "10.10.0.7",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/regions/us-east1/subnetworks/subnet-proyecto-terraform",
                "subnetwork_project": "proyecto-terraform-gcp",
                "vlan": 0
              }
            ],
            "project": "proyecto-terraform-gcp",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/zones/us-east1-b/instances/vm-servicio-principal",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web-terraform"
            ],
            "tags_fingerprint": "bjTO73hYDy4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-east1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_bgp_always_compare_med": false,
            "delete_default_routes_on_create": false,
            "deletion_policy": "DELETE",
            "enable_ula_internal_ipv6": false,
            "id": "projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform",
            "mtu": 0,
            "name": "vpc-proyecto-terraform",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "3088355391808515155",
            "numeric_id": "3088355391808515155",
            "project": "proyecto-terraform-gcp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "vpc-proyecto-terraform",
            "project": "proyecto-terraform-gcp"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_subnet_cidr_routes_overlap": false,
            "creation_timestamp": "2026-07-01T06:14:47.996-07:00",
            "deletion_policy": "DELETE",
            "gateway_address": "10.10.0.1",
            "id": "projects/proyecto-terraform-gcp/regions/us-east1/subnetworks/subnet-proyecto-terraform",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "subnet-proyecto-terraform",
            "network": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/networks/vpc-proyecto-terraform",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "proyecto-terraform-gcp",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/regions/us-east1/subnetworks/subnet-proyecto-terraform",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 6683992163936152616
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "subnet-proyecto-terraform",
            "project": "proyecto-terraform-gcp",
            "region": "us-east1"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-01T06:18:50.531-07:00",
            "deletion_policy": "DELETE",
            "fingerprint": "iT-aXO9uBzI=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/proyecto-terraform-gcp/global/targetHttpProxies/http-proxy-proyecto-terraform",
            "name": "http-proxy-proyecto-terraform",
            "project": "proyecto-terraform-gcp",
            "proxy_bind": false,
            "proxy_id": 5804837776061410645,
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/targetHttpProxies/http-proxy-proyecto-terraform",
            "url_map": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/urlMaps/url-map-proyecto-terraform"
          },
          "identity_schema_version": 1,
          "identity": {
            "name": "http-proxy-proyecto-terraform",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_backend_service.backend_contingencia",
            "google_compute_backend_service.backend_principal",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.servicio_contingencia",
            "google_compute_instance.servicio_principal",
            "google_compute_instance_group.grupo_contingencia",
            "google_compute_instance_group.grupo_principal",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet",
            "google_compute_url_map.url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-07-01T06:18:37.718-07:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-principal",
            "default_url_redirect": [],
            "deletion_policy": "DELETE",
            "description": "",
            "fingerprint": "0RhwMOeupoU=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "matcher-principal"
              }
            ],
            "id": "projects/proyecto-terraform-gcp/global/urlMaps/url-map-proyecto-terraform",
            "map_id": 1819444039060598083,
            "name": "url-map-proyecto-terraform",
            "path_matcher": [
              {
                "default_custom_error_response_policy": [],
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-principal",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "matcher-principal",
                "path_rule": [],
                "route_rules": [
                  {
                    "custom_error_response_policy": [],
                    "header_action": [],
                    "match_rules": [
                      {
                        "full_path_match": "",
                        "header_matches": [],
                        "ignore_case": false,
                        "metadata_filters": [],
                        "path_template_match": "",
                        "prefix_match": "/",
                        "query_parameter_matches": [],
                        "regex_match": ""
                      }
                    ],
                    "priority": 1,
                    "route_action": [
                      {
                        "cache_policy": [],
                        "cors_policy": [],
                        "fault_injection_policy": [],
                        "max_stream_duration": [],
                        "request_mirror_policy": [],
                        "retry_policy": [],
                        "timeout": [],
                        "url_rewrite": [],
                        "weighted_backend_services": [
                          {
                            "backend_service": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-principal",
                            "header_action": [],
                            "weight": 0
                          },
                          {
                            "backend_service": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/backendServices/backend-servicio-contingencia",
                            "header_action": [],
                            "weight": 100
                          }
                        ]
                      }
                    ],
                    "service": "",
                    "url_redirect": []
                  }
                ]
              }
            ],
            "project": "proyecto-terraform-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/proyecto-terraform-gcp/global/urlMaps/url-map-proyecto-terraform",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 1,
          "identity": {
            "name": "url-map-proyecto-terraform",
            "project": "proyecto-terraform-gcp"
          },
          "dependencies": [
            "google_compute_backend_service.backend_contingencia",
            "google_compute_backend_service.backend_principal",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.servicio_contingencia",
            "google_compute_instance.servicio_principal",
            "google_compute_instance_group.grupo_contingencia",
            "google_compute_instance_group.grupo_principal",
            "google_compute_network.vpc",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    }
  ]
}